2.9/manifests/project/todo-app/postgres-todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres
  namespace: project
spec:
  clusterIP: None
  selector:
    app: todo-postgres
  ports:
    - port: 5432
      targetPort: 5432
